# zlema_trader

./: .gitignore  .replit  OPTIMIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  POLYGON_SETUP.md  README.md  REFACTORING_SUMMARY.md  package-lock.json  pyproject.toml  replit.nix  start.sh  zlemaUI.py
backend/: config.py  indicators.py  main.py  main_old.py  models.py  requirements.txt  test_endpoint.py  tradelib.py
backend/libs/: indicators.py  tradelib.py
backend/services/: backtest_service.py  base_service.py  data_service.py  market_status_service.py  news_service.py  probability_service.py  trading_service.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.css
frontend/src/components/: AccountStatus.js  BacktestPage.js  CollapsibleSidebar.js  KeyLevelsControls.js  MarketStatus.js  Navigation.js  NewsPanel.js  PolynomialControls.js  StrategyTabs.js  TradeControls.js  TradingChart.js  TradingChartOptimized.js  TradingDashboard.js  TradingDashboardOptimized.js  ZeroLagControls.js
frontend/src/components/chart/: CandlestickChart.js  KeyLevelsChart.js  RibbonChart.js  SubplotChart.js
frontend/src/hooks/: useApi.js  useApiOptimized.js  useInterval.js
frontend/src/theme/: index.js
libs/: indicators.py
