[tool.poetry]
name = "zlema-trader"
version = "1.0.0"
description = "ZLEMA Trading Application with AI-powered analysis"
authors = ["Paul Seekings"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
numpy = "^1.24.3"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
plotly = "^5.17.0"
oandapyV20 = "^0.7.2"
scipy = "^1.11.4"
requests = "^2.31.0"
python-multipart = "^0.0.6"
feedparser = "^6.0.10"
openai = "^1.0.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"] 